ncc/testsuite/negative/bug22.n

module M
{
  foo (x : int, y : int) : void { ignore (x + y); }
  bar (ele : int, mele : int, dudki : int, gosp : int, malutki : int) : void
  {
    ignore (ele + mele + dudki + gosp + malutki);
  }

  bar (ele : int, mele : int, dudki : int, gosp : int, malutki : int, ojdanadana : int) : void
  {
    ignore (ele + mele + dudki + gosp + malutki + ojdanadana);
  }
  
  Main () : void
  {
    foo (3, x = 4); // E: keyword parameter `x' already specified as an unnamed parameter
    foo (3, qux = 4); // E: no such keyword parameter `qux' among valid parameter names

    // FIXME
    bar (ele = 7, mele = 28, dudki = 32, malutki = 77); // E: .*
  }
}

